--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,57 +14,86 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:weightSum="10"
+        android:weightSum="21"
         android:orientation="horizontal">
-
-        <Spinner android:id="@+id/paired_devices"
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:spinnerMode="dialog"
-            />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="8"
             android:orientation="vertical"
-            android:layout_weight="1"
-            android:weightSum="11">
-            <Button
+            android:weightSum="4">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="5"
-                android:text="Start"
-                android:enabled="true"
-                android:background="@color/green"/>
-            <Space
+                android:orientation="horizontal"
                 android:layout_weight="1"
+                android:weightSum="11">
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:text="Download"
+                    android:enabled="true"
+                    android:background="@color/green"
+                    android:onClick="onButtonStart"
+                    android:id="@+id/button_start"/>
+                <Space
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp" />
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:text="Cancel"
+                    android:enabled="false"
+                    android:background="@color/red"
+                    android:onClick="onButtonStop"
+                    android:id="@+id/button_cancel"/>
+            </LinearLayout>
+
+            <Button
                 android:layout_height="0dp"
-                android:layout_width="match_parent" />
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:text="Upload"
+                android:enabled="true"
+                android:id="@+id/button_upload"
+                android:onClick="onButtonStop"/>
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="5"
-                android:text="Stop"
-                android:enabled="false"
-                android:background="@color/red"/>
+                android:layout_weight="1"
+                android:text="Settings"
+                android:onClick="onButtonSettings"/>
+
+            <TextView
+                android:padding="5dp"
+                android:id="@+id/textview_output"
+                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:text="PULSE RATE:"
+                android:textColor="@color/black"
+                android:textSize="20dp"/>
+
         </LinearLayout>
+
+
+        <Space
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_width="0dp" />
 
 
         <com.jjoe64.graphview.GraphView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="6"
+            android:layout_weight="12"
             android:id="@+id/graph"/>
-
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:padding="5dp"
-            android:text="Output"
-            android:id="@+id/textview_output"/>
 
     </LinearLayout>
 
