--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="green">#61ea66</color>
     <color name="red">#ea5858</color>
+    <color name="black">#000000</color>
 </resources>
